[gd_scene load_steps=28 format=3 uid="uid://bowe6tft45mho"]

[ext_resource type="Script" path="res://scripts/health.gd" id="1_5ypsr"]
[ext_resource type="Script" path="res://scenes/Enemies/Bakery/lil_croissant_2.gd" id="1_5611w"]
[ext_resource type="Texture2D" uid="uid://wj2xreldyf4d" path="res://funnyimg4game/Croissante.squish.special-Sheet.png" id="2_coeo3"]
[ext_resource type="Texture2D" uid="uid://c7p44sdotsofx" path="res://funnyimg4game/Croissante.squish-Sheet.png" id="3_4dvm2"]
[ext_resource type="Texture2D" uid="uid://ceh3e6ldo1m4s" path="res://funnyimg4game/Crossiante.walk-Sheet.png" id="4_hgql4"]
[ext_resource type="Script" path="res://scripts/hurtbox.gd" id="5_guwlw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fnl6x"]
radius = 8.0
height = 58.0

[sub_resource type="AtlasTexture" id="AtlasTexture_mreq0"]
atlas = ExtResource("2_coeo3")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_phbbr"]
atlas = ExtResource("2_coeo3")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua3gk"]
atlas = ExtResource("2_coeo3")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpeog"]
atlas = ExtResource("2_coeo3")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_711m8"]
atlas = ExtResource("2_coeo3")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4twq"]
atlas = ExtResource("2_coeo3")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjmms"]
atlas = ExtResource("2_coeo3")
region = Rect2(384, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7t80"]
atlas = ExtResource("2_coeo3")
region = Rect2(448, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfuyd"]
atlas = ExtResource("3_4dvm2")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k8ii"]
atlas = ExtResource("3_4dvm2")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccyyo"]
atlas = ExtResource("3_4dvm2")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6oor"]
atlas = ExtResource("3_4dvm2")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_emr3n"]
atlas = ExtResource("3_4dvm2")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjmqc"]
atlas = ExtResource("3_4dvm2")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpk0l"]
atlas = ExtResource("3_4dvm2")
region = Rect2(384, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h32bm"]
atlas = ExtResource("3_4dvm2")
region = Rect2(448, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbgqk"]
atlas = ExtResource("4_hgql4")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uqvj"]
atlas = ExtResource("4_hgql4")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss4si"]
atlas = ExtResource("4_hgql4")
region = Rect2(128, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kk88v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mreq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phbbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua3gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpeog")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_711m8")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_y4twq")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_vjmms")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_v7t80")
}],
"loop": false,
"name": &"brutal death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfuyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k8ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccyyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6oor")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_emr3n")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_mjmqc")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_xpk0l")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_h32bm")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbgqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uqvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss4si")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uqvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uqvj")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}]

[node name="lilCroissant2" type="CharacterBody2D"]
floor_constant_speed = true
floor_max_angle = 1.309
script = ExtResource("1_5611w")
checkForLedges = false

[node name="Collision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fnl6x")

[node name="Health" type="Node" parent="."]
script = ExtResource("1_5ypsr")
maxHealth = 2
health = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_kk88v")
animation = &"idle"
autoplay = "idle"

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(29, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(-29, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 9)

[node name="RayCastRightDown" type="RayCast2D" parent="."]
visible = false
position = Vector2(30, 0)
target_position = Vector2(0, 13)

[node name="RayCastLeftDown" type="RayCast2D" parent="."]
visible = false
position = Vector2(-30, 0)
target_position = Vector2(0, 13)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
script = ExtResource("5_guwlw")

[node name="HurtBoxShape" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fnl6x")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
